--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand " href="/">T31K</a>
+				<a class="navbar-brand " href="/">JackieJr18</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
