--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
 
 	<!-- Nes CSS -->
 	<link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">
-	<!-- minify -->
-	<link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
-	<!-- latest -->
-	<link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
-	<!-- core style only -->
-	<link href="https://unpkg.com/nes.css/css/nes-core.min.css" rel="stylesheet" />
-
+	<style>
+		html {
+			font-family: "Pokemon Classic";
+		}
+	</style>
 
 </head>
 
@@ -118,6 +116,8 @@
 			<div class="tags"></div>
 		</div>
 	</section>
+
+	<button type="button" class="nes-btn is-primary">Primary</button>
 
 	<section id="tech_stack">
 		<div class="row">
