changed subtitle font in text section

--- a/index.html
+++ b/index.html
@@ -103,13 +103,11 @@
 					</div>
 				</div>
 				<div class="inner">
-					<p> Hi, Tim here. Ex flight crew, present day dev </p>
-					<p> Full Stack but specialize on the frontend (as you can see :P)</p>
-					<p> Love tech, computers, robots, blockchain and books</p>
-					<p> Avid writer on Medium for a publication called <a href="https://javascript.plainenglish.io/">JavaScript in
-							Plain English</a </a></p>
-					<p> Firm believer of Atomic Habits, trusting that consistent hard work & good habits can develop into any
-						formidable skill anywhere </p>
+					<p> Hello, my name is Jackie. </p>
+					<p> Front End Web Developer and Graphic Designer. </p>
+					<p> I absoulutely love tech and different gadgets.</p>
+					<p> Huge fan of the 8bit art style. (Check out my work!) <a href="https://www.reddit.com/user/WoodStixsNBits/">WoodStixsNBits</a </a>.</p>
+					<p> "The technology you use impresses no one. The experience you create with it is everything." - Sean Gerety</p>
 					<a class='link' href="/about">Get to know me!</a>
 				</div>
 			</div>
