removal of nes elements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		content="Tim Wong is a Software Engineer with a wide array of skills from programming, writing, design. Love to meet new people & learn all about startups and businesses.">
 	<meta name="author" content="">
 
-	<title>Tim Wong Portfolio Site | Software Engineer, Ex Flight Crew, Atomic Habits (JavaScript, Ruby, React, Python)
+	<title>JackieJr18 Portfolio Site | Web Developer and Graphic Designer
 	</title>
 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -36,15 +36,6 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
 	<link rel="manifest" href="img/fav/site.webmanifest">
-
-	<!-- Nes CSS -->
-	<link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">
-	<style>
-		html {
-			font-family: "Pokemon Classic";
-		}
-	</style>
-
 </head>
 
 <body id="home" class="index">
@@ -114,8 +105,6 @@
 			<div class="tags"></div>
 		</div>
 	</section>
-
-	<button type="button" class="nes-btn is-primary">Primary</button>
 
 	<section id="tech_stack">
 		<div class="row">
