--- a/newsletter.html
+++ b/newsletter.html
@@ -55,7 +55,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand " href="/">T31K</a>
+				<a class="navbar-brand " href="/">JackieJr18</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
@@ -85,7 +85,7 @@
 				</div>
 				<div class="inner" style="height: 600px;">
 					<h4 class="new">>_ </h4>
-					<h3 class="text-center">Get Notified When I Post On Medium 📧</h3>
+					<h3 class="text-center">Get Notified When I Post Projects</h3>
 					<br><br>
 					<form role="form" action="https://formspree.io/f/xpzkllpn" method="post" class="form" style="width: 100%;">
 						<div class="form-group">
