created own nes github button

--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,8 @@
 					<h3 class="text-center">Connect With Me! 🤙🏻</h3>
 					<br><br>
 					<div class="wrapper">
-						<button class="nes-btn">GitHub</button>
+						<a href="https://github.com/jackiejr18" target="_blank"><button class="nes-btn gh">GitHub</button></a>
 					</div>
-					<div class="gh"> <a target="_blank" href="https://github.com/T31K"><h5>GitHub</h5> </a></div>
 					<div class="bmc"><a target="_blank" href="https://www.buymeacoffee.com/t31k"><h5>BMC</h5> </a></div>
 					<div class="pf"> <a target="_blank" href="https://t31k.dev/"><h5>Portfolio</h5> </a></div>
 					<div class="md"> <a target="_blank" href="https://www.medium.com/@t31k"><h5>Medium</h5> </a></div>
