addition of another button

--- a/contact.html
+++ b/contact.html
@@ -93,8 +93,8 @@
 						<a href="https://github.com/jackiejr18" target="_blank"><button class="nes-btn gh">GitHub</button></a>
 						<a href="" target="_blank"><button class="nes-btn bmc">BMC</button></a>
 						<a href="" target="_blank"><button class="nes-btn pf">Portfolio</button></a>
+						<a href="" target="_blank"><button class="nes-btn md">Medium</button></a>
 					</div>
-					<div class="md"> <a target="_blank" href="https://www.medium.com/@t31k"><h5>Medium</h5> </a></div>
 					<div class="tt"> <a target="_blank" href="https://www.twitter.com/teikmunwong"><h5>Twitter</h5> </a></div>
 					<div class="li"> <a target="_blank" href="https://www.linkedin.com/in/teikmunwong"><h5>LinkedIn</h5> </a></div>
 				</div>
