completion of contact buttons

--- a/contact.html
+++ b/contact.html
@@ -94,9 +94,9 @@
 						<a href="" target="_blank"><button class="nes-btn bmc">BMC</button></a>
 						<a href="" target="_blank"><button class="nes-btn pf">Portfolio</button></a>
 						<a href="" target="_blank"><button class="nes-btn md">Medium</button></a>
+						<a href="" target="_blank"><button class="nes-btn tt">Twitter</button></a>
+						<a href="" target="_blank"><button class="nes-btn li">LinkedIn</button></a>
 					</div>
-					<div class="tt"> <a target="_blank" href="https://www.twitter.com/teikmunwong"><h5>Twitter</h5> </a></div>
-					<div class="li"> <a target="_blank" href="https://www.linkedin.com/in/teikmunwong"><h5>LinkedIn</h5> </a></div>
 				</div>
 				<div class="tags"></div>
 				</div>
