added code for nes-btn

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Tim Wong is a Software Engineer with a wide array of skills from programming, writing, design. Love to meet new people & learn all about startups and businesses.">
 	<meta name="author" content="">
 
-	<title>Tim Wong Portfolio Site | Software Engineer, Ex Flight Crew, Atomic Habits (JavaScript, Ruby, React, Python)</title>
+	<title>JackieJr18 Portfolio Site | Web Developer and Graphic Designer</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand " href="/">T31K</a>
+				<a class="navbar-brand " href="/">JackieJr18</a>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
