--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		content="Tim Wong is a Software Engineer with a wide array of skills from programming, writing, design. Love to meet new people & learn all about startups and businesses.">
 	<meta name="author" content="">
 
-	<title>JackieJr18 Portfolio Site | Web Developer and Graphic Designer
-	</title>
+	<title>JackieJr18 Portfolio Site | Web Developer and Graphic Designer</title>
 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -190,6 +189,9 @@
 								<p class="work-wrap-text-alt">Rebranding</p>
 								<a href="/work#payboy" class="btn btn-work btn-orange btn-rainbow text-right " target="_blank">Learn
 									More</a>
+								<div class="button-wrapper">
+									<button class="nes-btn">Learn More</button>
+								</div>
 							</div>
 						</div>
 					</div>
