added rainbow animation for button

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 								<a href="/work#payboy" class="btn btn-work btn-orange btn-rainbow text-right " target="_blank">Learn
 									More</a>
 								<div class="button-wrapper">
-									<button class="nes-btn">Learn More</button>
+									<button class="nes-btn rainbow">Learn More</button>
 								</div>
 							</div>
 						</div>
