red button added

--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
 							<h3 class="title">BetterSG</h3>
 							<p class="work-wrap-text">Redesign & Revamp</p>
 							<a href="/work#bettersg" class="btn btn-red" target="_blank">Learn More</a>
-
+							<div class="button-wrapper">
+								<button class="nes-btn red">Learn More</button>
+							</div>
 						</div>
 					</div>
 					<div class="col-md-5 p-none">
