addition of orange button, adjustment of button positioning

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
 							<div class="text-right text-custom-center">
 								<h3 class="title-alt">busApp</h3>
 								<p class="work-wrap-text-alt">Bus ETA App</p>
-								<a href="/work#busapp" class="btn btn-work btn-orange text-right " target="_blank">Learn More</a>
+								<div class="button-wrapper">
+									<button class="nes-btn orange">Learn More</button>
+								</div>
 							</div>
 						</div>
 					</div>
