addition of yellow button

--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
 						<div class="work-wrapper-l">
 							<h3 class="title">Mirabellé</h3>
 							<p class="work-wrap-text">Art & Craft Learning Centre Landing Page</p>
-							<a href="/work#mirabelle" class="btn btn-red btn-yellow" target="_blank">Learn More</a>
+							<div class="button-wrapper">
+								<button class="nes-btn yellow">Learn More</button>
+							</div>
 						</div>
 					</div>
 					<div class="col-md-5 p-none">
