added button to media query and centered, added blue button

--- a/index.html
+++ b/index.html
@@ -262,7 +262,6 @@
 					<div class="col-md-5 p-none">
 						<div class="work-wrapper-l-alt bg-green">
 							<img class="work-img" src="img/icon/cm.svg" alt="">
-
 						</div>
 					</div>
 					<div class="col-md-5 p-none">
@@ -270,7 +269,9 @@
 							<div class="text-right text-custom-center">
 								<h3 class="title-alt ">Clemantee</h3>
 								<p class="work-wrap-text-alt">Music Company Landing Page</p>
-								<a href="/work#clemantee" class="btn btn-work btn-green text-right " target="_blank">Learn More</a>
+								<div class="button-wrapper">
+									<button class="nes-btn green">Learn More</button>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -283,7 +284,9 @@
 						<div class="work-wrapper-l">
 							<h3 class="title">VeriFact</h3>
 							<p class="work-wrap-text">Crowdsourced Fact-Check App</p>
-							<a href="/work#verifact" class="btn btn-red btn-blue" target="_blank">Learn More</a>
+							<div class="button-wrapper">
+								<button class="nes-btn blue">Learn More</button>
+							</div>
 						</div>
 					</div>
 					<div class="col-md-5 p-none">
