all my work buttons are now nes style

--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
 							<div class="text-right text-custom-center">
 								<h3 class="title-alt ">Bellboy</h3>
 								<p class="work-wrap-text-alt">Full Stack Hotel Review App</p>
-								<a href="/work#bellboy" class="btn btn-work btn-purple text-right " target="_blank">Learn More</a>
+								<div class="button-wrapper">
+									<button class="nes-btn purple">Learn More</button>
+								</div>
 							</div>
 						</div>
 					</div>
