changed the submit button to a nes style button

--- a/index.html
+++ b/index.html
@@ -348,8 +348,9 @@
 								<span class="input-group-addon"><i class="glyphicon glyphicon-ok form-control-feedback"></i></span>
 							</div>
 
-							<input type="submit" name="submit" id="submit" value="Submit"
-								class="btn btn-work btn-red bg-special mx-auto">
+								<div class="button-wrapper">
+									<button class="nes-btn grey">Submit</button>
+								</div>
 
 						</div>
 
